fixed date spacing issue on latest entries/home page
Still an issue if titles are long, needs to be done a different way.
Also need to keep all featured images consistent in size so we can
space these things right.

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -156,12 +156,17 @@
 }
 
 @media(max-width: 50em) {
-    .latest-entries {
-        .single-entry {
-            a.featured-image {
-                max-height: 185px;
-                overflow: hidden;
-                display: block;
+    #home-main {
+        .latest-entries {
+            .single-entry {
+                a.featured-image {
+                    max-height: 185px;
+                    overflow: hidden;
+                    display: block;
+                }
+                div.featured-meta {
+                    bottom: 4px;
+                }
             }
         }
     }
